Set minimum height to page container to avoid layout shifting

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,3 +4,7 @@
 	width: "fit-content";
 	padding: 2px;
 }
+
+.profile-container {
+	margin: 80px 5px;
+}
